<resources>
    <string name="app_name">iVegan</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="loginRegister">Does not have account? Create a new one</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos</string>
    <string name="hintSearch">Поиск еды без мяса...</string>
</resources>
